<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">乡乡</string>
    <string name="app_sign">熟悉的才是好玩的</string>
    <string name="copy_right">©2014 Feytuo.All Rights Reserved</string>
    <string name="action_settings">Settings</string>
    <string name="changsha">长沙话</string>
    <string name="country">湖南省长沙市</string>
    <string name="return_text">返回</string>
    <string name="publish_fangyang">发方言</string>
    <string name="publish_text">发布</string>
    <string name="rerecord">重录</string>
    <string name="feedback">反馈</string>
    <string name="ok">提交</string>
    <string name="comment">评论</string>
    <string name="mymessage">帖子</string>
    <string name="mycollect">收藏</string>
    <string name="myshare_to">把消息分享到</string>
    <string name="pealseselectlogin">请选择登录方式</string>
    <string name="position_choose_dialog">请选择所在地</string>
    <string name="publish_hint">请用一段话描述语音</string>
    <string name="feedback_hint">敢吐槽几句吗？</string>
    <string name="pressskeak">按住说话</string>
    <string name="wait">正在发布，请稍候&#8230;</string>
    <string name="hometown">家    乡</string>
    <string name="talkto">发起聊天</string>
    <string name="marsman">火星客</string>
    <string name="addtofriend">加为好友</string>
    <string name="countryman">乡友</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_cancel_download_weibo">\t取消下载</string>
    <string name="weibosdk_demo_toast_share_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_failed">分享失败</string>
    <string name="weibosdk_demo_toast_share_canceled">取消分享</string>
    <string name="weibosdk_demo_not_support_api_hint">微博客户端不支持 SDK 分享或微博客户端未安装或微博客户端是非官方版本。</string>
    <string name="weibosdk_demo_access_token_is_empty">Access Token 不存在，请先登录</string>
    <string name="about_xiangxiang">关于乡乡</string>
    <string name="clear_cache">清理缓存</string>
    <string name="help_and_feeback">帮助与反馈</string>
    <string name="privacy">使用条款与隐私政策</string>
    <string name="to_friends">推荐给好友</string>
    <string name="copyright">飞拓科技版权所有</string>
    <string name="copyright2014">Copyright © feytuo 2014</string>
    <string name="allright">All Right Reservrd</string>
    <string name="add_friends">添加好友</string>
    <string name="pleaseinputnick">请输入好友昵称</string>
    <string name="blacklist">黑名单</string>
    <string name="cilckstoprecord">再点一下结束录音</string>
    <string name="stoprecord">松开结束录音</string>
    <string name="press_record">按住录音</string>
    <string name="find">发现</string>
    <string name="hot_topic">热门话题</string>
    <string name="duanzi">方言段子</string>
    <string name="ktv">方言KTV</string>
    <string name="show">方言秀场</string>
    <string name="share">分享</string>
    <string name="nick">昵称</string>
    <string name="goodstudy">天天向上好好学习</string>
    <string name="home">家乡</string>
    <string name="my_tiezi">我的帖子</string>
    <string name="visa">签名</string>
    <string name="setting">设置</string>
    <string name="cilck_record">点一下开始录音</string>
    <string name="maxmun">0/42</string>
    <string name="describedrecord">请用一段话描述语音</string>
    <string name="my_fanyan">我要说</string>
    <string name="my_position">火星</string>
    <string name="zan">赞</string>
<string name="hot_city">热门城市</string>
    <string name="inputkey">请输入关键字</string>
    <string name="all">全部</string>
    <string name="beijing">北京</string>
    <string name="guangzhou">广州</string>
    <string name="mychangsha">长沙</string>
    <string name="chengdu">成都</string>
    <string name="allcity">全部城市</string>
    <!-- 环信 -->
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <!-- <string name="ok">确定</string> -->
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">S</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>

</resources>