<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_hight"
        android:background="@color/indexbg" >

        <Button
            android:layout_width="48.0dip"
            android:layout_height="48.0dip"
            android:layout_centerVertical="true"
            android:background="@drawable/return_selector"
            android:onClick="me_about_us_ret" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/about_xiangxiang"
            android:textColor="@color/white"
            android:textSize="@dimen/city_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="27.0"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"

            android:background="@drawable/ic_launcher"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- 按钮 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/common_selector"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@color/weibo_unline_3d" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_hight"
            android:background="@drawable/common_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="cleanCache"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_weight="1.0"
                android:autoLink="all"
                android:text="@string/clear_cache"
                android:textColor="@color/black"
                android:textSize="16.0sp" />

            <ImageView
                android:layout_width="12.0dip"
                android:layout_height="12.0dip"
                android:layout_marginRight="10.0dip"
                android:contentDescription="@string/app_name"
                android:src="@drawable/into_icon" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@color/weibo_unline_3d" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_hight"
            android:background="@drawable/common_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="shareToFriends"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_weight="1.0"
                android:autoLink="all"
                android:text="@string/to_friends"
                android:textColor="@color/black"
                android:textSize="16.0sp" />

            <ImageView
                android:contentDescription="@string/app_name"
                android:layout_width="12.0dip"
                android:layout_height="12.0dip"
                android:layout_marginRight="10.0dip"
                android:src="@drawable/into_icon" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@color/weibo_unline_3d" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_hight"
            android:background="@drawable/common_selector"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="activity_about_us_feedback"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_weight="1.0"
                android:autoLink="all"
                android:text="@string/help_and_feeback"
                android:textColor="@color/black"
                android:textSize="16.0sp" />

            <ImageView
                android:contentDescription="@string/app_name"
                android:layout_width="12.0dip"
                android:layout_height="12.0dip"
                android:layout_marginRight="10.0dip"
                android:src="@drawable/into_icon" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@color/weibo_unline_3d" />
    </LinearLayout>
    <!-- 按钮  结束 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="24.0"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/our_privacy_olicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48.0dip"
            android:autoLink="all"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="our_privacy_olicy"
            android:text="@string/privacy"
            android:textColor="@color/indexbg"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center_horizontal"
            android:text="@string/copyright"
            android:textColor="@color/indexbg"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center_horizontal"
            android:text="@string/copyright2014"
            android:textColor="@color/indexbg"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center_horizontal"
            android:text="@string/allright"
            android:textColor="@color/indexbg"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>