<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/weibo_unline"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_hight"
        android:background="@color/indexbg" >

        <Button
            android:id="@+id/return_button_id"
            android:layout_width="48.0dip"
            android:layout_height="48.0dip"
            android:layout_centerVertical="true"
            android:background="@drawable/return_selector"
            android:onClick="feedbackReturnRelative" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/feedback"
            android:textColor="@color/white"
            android:textSize="@dimen/title_city_size" />

        <Button
            android:id="@+id/feedback_set_button"
            android:layout_width="48.0dip"
            android:layout_height="30.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8.0dip"
            android:background="@drawable/corners_storke_white"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/city_text_size" />
    </RelativeLayout>

    <EditText
        android:id="@+id/publish_text"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="8.0dip"
        android:background="@color/white"
        android:gravity="top"
        android:layout_marginLeft="2.0dip"
        android:layout_marginRight="2.0dip"
        android:hint="@string/feedback_hint"
        android:inputType="textMultiLine"
        android:singleLine="false" >

        <requestFocus />
    </EditText>
    <!-- textScaleX控制字与字之间的间距, android:gravity="left|top",android:gray="top" //多行中指针在第一行第一位置 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </LinearLayout>

</LinearLayout>